--- a/myson_en_index.html
+++ b/myson_en_index.html
@@ -17,6 +17,7 @@
 
 
         </header>
+        
         <main>
             <aside>
                 <h3 style="color:coral">This Week English Study Plan</h3>
@@ -49,7 +50,7 @@
                 <div>
                     <h3>그럼 실제 영어에서 가장 많이 쓰이는 말하고 듣는 단어가 무엇인지 함께 알아볼까요?</h3><a href="myson_en_index01.html" target="_blank">&rarr;Go! Go!</a>
 				</div>
-					
+            </section>		
 			<hr>
 			<p><a href="#">&uarr;맨위로</a></p>
 			
