--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header>
+        <header>https://github.com/junghoon76kim/myson_eng/blob/main/index.html
             <h1>Daily English Study - DoomSlayer_Yuseung</h1>
             <h2>익숙해지면 무엇이든 잘할수있다.</h2>
 
@@ -48,7 +48,7 @@
                     </dl>
                 </div> 
                 <div>
-                    <h3>그럼 실제 영어에서 가장 많이 쓰이는 말하고 듣는 단어가 무엇인지 함께 알아볼까요?</h3><a href="myson_en_index01.html" target="_blank">&rarr;Go! Go!</a>
+                    <h3>그럼 실제 영어에서 가장 많이 쓰이는 말하고 듣는 단어가 무엇인지 함께 알아볼까요?</h3><a href="01.html" target="_blank">&rarr;Go! Go!</a>
 				</div>
             </section>		
 			<hr>
