--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header>https://github.com/junghoon76kim/myson_eng/blob/main/index.html
+        <header>
             <h1>Daily English Study - DoomSlayer_Yuseung</h1>
             <h2>익숙해지면 무엇이든 잘할수있다.</h2>
 
